@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/webapp-config
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/webapp-config/ChangeLog,v 1.82 2012/06/28 21:09:54 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/webapp-config/ChangeLog,v 1.83 2012/06/28 23:28:24 blueness Exp $
+
+  28 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
+  webapp-config-1.50.19.ebuild:
+  Temporary workaround for parallel build in doc/Makefile
 
   28 Jun 2012; Mike Gilbert <floppym@gentoo.org> webapp-config-1.50.19.ebuild:
   Restrict python 2.5 based on advice from Arfrever.
